--- a/src/main/resources/assets/cidb/lang/ru_ru.json
+++ b/src/main/resources/assets/cidb/lang/ru_ru.json
@@ -33,5 +33,8 @@
   "cidb.cconfig.pairs": "Пар",
 
   "cidb.config.uniqueitemcolorlist.name": "Уникальный Список Цветов Предмета",
-  "cidb.config.uniqueitemcolorlist.desc": "Карта предметов с списками цветов. \nЕсли предмет находится в карте, то его полоска прочности будет использоватьь цвета, привязанных к предмету в карте, вместо стандартных."
+  "cidb.config.uniqueitemcolorlist.desc": "Карта предметов с списками цветов. \nЕсли предмет находится в карте, то его полоска прочности будет использовать цвета, привязанных к предмету в карте, вместо стандартных.",
+  "cidb.config.colors.title": "Цвета",
+  "cidb.config.parameters.title": "Параметры",
+  "cidb.config.name": "Настройки CIDB"
 }
