--- a/src/main/resources/assets/cidb/lang/ru_ru.json
+++ b/src/main/resources/assets/cidb/lang/ru_ru.json
@@ -36,5 +36,16 @@
   "cidb.config.uniqueitemcolorlist.desc": "Карта предметов с списками цветов. \nЕсли предмет находится в карте, то его полоска прочности будет использовать цвета, привязанных к предмету в карте, вместо стандартных.",
   "cidb.config.colors.title": "Цвета",
   "cidb.config.parameters.title": "Параметры",
-  "cidb.config.name": "Настройки CIDB"
+  "cidb.config.name": "Настройки CIDB",
+
+  "cidb.config.durabilitycolorstyle.name": "Стиль цвета полоски прочности",
+  "cidb.config.durabilitycolorstyle.description": "Определяет как будут отображатся цвета.\nВанилла - Стандартный стиль.\nРадуга - цвет меняется со временем. Скорость взята из Скорости мерцания прочности.\nГрадиент - полоска рисуется градиентом. Не влияет на текстовые стили прочности.\nВнимание! В градиентном стиле, модовые предметы, изменяющие цвет полоски прочности, также будут изменены. Если вы этого не хотите, добавьте предмет в Уникальный Список Цветов Предмета с одним цветом. (Это временное решение, позже будет способ удобнее!)",
+
+  "cdib.barcolorstyles.vanilla": "Ванилла",
+  "cdib.barcolorstyles.rainbow": "Радужный",
+  "cdib.barcolorstyles.gradient": "Градиент",
+
+  "cidb.config.presets.title": "Пресеты",
+  "cidb.config.preset1.name": "Радужный стиль",
+  "cidb.config.preset2.name": "Предметный стиль"
 }
